<resources>
    <string name="app_name">오구오구</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">비밀번호 입력</string>
    <string name="prompt_password_confirm">비밀번호 확인</string>
    <string name="action_register">회원가입</string>
    <string name="action_sign_in">로그인</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">패스워드를 6자 이상 입력해 주세요.</string>
    <string name="error_incorrect_password">패스워드가 일치하지 않습니다.</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>


    <string name="title_text">Google Sign-In\nQuickstart</string>

    <!-- Sign-in status messages -->
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="error_null_person">
        Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
        enabled for your project, you have a properly configured google-services.json file
        and that your device has an internet connection.
    </string>
    <string name="loading">Loading…</string>
    <string name="auth_code_fmt">Auth Code: %s</string>
    <string name="id_token_fmt">ID Token: %s</string>

    <!-- Google Play Services error for Toast -->
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>

    <!-- Button labels -->
    <string name="google_sign_out">Google Sign Out</string>
    <string name="kakao_sign_out">Kakao Sign Out</string>
    <string name="facebook_sign_out">Facebook Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="refresh_token">Get Fresh Token</string>

    <!-- Content Description for images -->
    <string name="desc_google_icon">Google Logo</string>

    <!-- Rationale for asking for Contacts -->
    <string name="contacts_permission_rationale">Contacts access is needed in order to retrieve your email address.</string>

    <!-- Activity Names and Descriptions -->
    <string name="name_sign_in_activity">SignInActivity</string>
    <string name="desc_sign_in_activity">Signing in, signing out, and revoking access.</string>
    <string name="desc_sign_in_activity_scopes">Signing in, signing out, and revoking access with Google Drive permissions.</string>
    <string name="name_id_token_activity">IdTokenActivity</string>
    <string name="desc_id_token_activity">Retrieving an ID Token for the user.</string>
    <string name="desc_auth_code_activity">Demonstrate retrieving an auth code for authorizing your server.</string>
    <string name="name_auth_code_activity">ServerAuthCodeActivity</string>

    <!-- TODO(user): replace with your real server client ID -->
    <!-- Server Client ID.  This should be a valid Web OAuth 2.0 Client ID obtained
         from https://console.developers.google.com/ -->
    <string name="server_client_id">941010156927-nifi4fgpesqmfkgi4kcp73fkgr9vsjee.apps.googleusercontent.com</string>
    <string name="server_client_id_test">156850887488-8lmnbfdekjit46h9iiskapu4764cia7r.apps.googleusercontent.com</string>
    <string name="title_activity_ogu_ogu">OguOguActivity</string>
    <string name="kakao_app_key">1656d12f1bf3f5dceda4c7bd2a3a9c8e</string>
    <string name="google_maps_key" translatable="false" templateMergeStrategy="preserve">AIzaSyAHCzzxck3TrXLPN83_ScxYkmqoMR2CgNk</string>

    <string name="tab_1">Label 1</string>
    <string name="tab_2">Label 2</string>
    <string name="tab_3">Label 3</string>
    <string name="tab_4">Label 4</string>
    <string name="tab_5">Label 5</string>

    <string name="menu_1">Menu 1</string>
    <string name="menu_2">Menu 2</string>
    <string name="menu_3">Menu 3</string>
    <string name="menu_4">Menu 4</string>
    <string name="menu_5">Menu 5</string>

    <string name="srch">검색</string>
    <string name="cancel">취소</string>
    <string name="delete">삭제</string>
    <string name="no">아니오</string>
    <string name="yes">예</string>
    <string name="confirm">확인</string>

    <string name="alt_network_error">네트워크가 연결되지 않았습니다.\n설정창으로 가시겠습니까?</string>
    <string name="alt_delete">삭제 하시겠습니까?</string>

    <string name="write_btn_place">장소 공유</string>
    <string name="write_btn_mypet">내펫 자랑</string>
    <string name="write_btn_mine">내 앨범</string>

    <string name="show_all_cmmt">전체 댓글 보기 ></string>
    <string name="place_list">이 장소의 글</string>

    <string name="facebook_app_id">253331568529490</string>

    <string name="place_cafe">카페/음식점</string>
    <string name="place_hospital">병원</string>
    <string name="place_walk">공원/놀이터</string>

    <string name="place_srch_hint">장소명 검색</string>

    <string name="place_srch_explain">먼저 등록 할 장소를 선택 후 검색해 주세요.</string>
    <string name="place_no_place">찾으시는 장소가 없으시면?</string>
    <string name="place_new_place">새로운 장소 등록</string>

    <string name="place_input_name">장소명 입력</string>
    <string name="place_sub_category">소 카테고리 선택</string>
    <string name="place_add_info">기타추가</string>
    <string name="place_addr_map">주소 및 지도</string>
    <string name="place_addr_srch">지도검색</string>

    <string name="add_detail_info">추가 상세 정보</string>
    <string name="title">제목</string>
    <string name="place_detail_conts">상세 내용을 입력해 주세요.</string>
    <string name="price">가격</string>

    <string name="toast_image_max">이미지는 최대 5장까지 업데이트 가능합니다.</string>
    <string name="place_image_descript">이미지는 최소 1장 이상 올리셔야 합니다.</string>

    <string name="cmmt_edit_hint">댓글 달기</string>

    <string name="crop_image_activity_title"></string>
    <string name="crop_image_menu_rotate_left">Rotate counter clockwise</string>
    <string name="crop_image_menu_rotate_right">Rotate</string>
    <string name="crop_image_menu_crop">Crop</string>
    <string name="pick_image_intent_chooser_title">Select source</string>
    <string name="title_activity_login2">Sign in</string>
    <string name="title_activity_login_email">Sign in</string>

    <string name="oui_sign_in_with_google" translation_description="Sign in button text">Google 계정으로 로그인</string>
    <string name="oui_sign_in_with_facebook" translation_description="Sign in button text">Facebook으로 로그인</string>
    <string name="oui_sign_in_with_email" translation_description="Sign in button text">이메일로 로그인</string>

</resources>


