<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_ogu_ogu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.oguogu.activity.OguOguActivity"
    tools:showIn="@layout/activity_ogu_ogu">

    <Button
        android:id="@+id/btn_google_sign_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/google_sign_out"
        android:theme="@style/ThemeOverlay.MyDarkButton"
        android:visibility="gone" />

    <Button
        android:id="@+id/btn_kakao_sign_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kakao_sign_out"
        android:theme="@style/ThemeOverlay.MyDarkButton"
        android:visibility="gone"/>

    <Button
        android:id="@+id/btn_facebook_sign_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/facebook_sign_out"
        android:theme="@style/ThemeOverlay.MyDarkButton"
        android:visibility="gone"/>
</RelativeLayout>
