<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/content_ogu_ogu"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/pop_bg">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/color_txt_37"
        android:gravity="center"
        android:textSize="@dimen/dimen_14sp"
        android:layout_marginTop="@dimen/dimen_30dp"
        android:text="@string/alt_delete"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:layout_marginBottom="@dimen/dimen_25dp"
        android:layout_marginLeft="@dimen/dimen_30dp"
        android:layout_marginRight="@dimen/dimen_30dp">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color_txt_37"
            android:textSize="@dimen/dimen_14sp"
            android:background="@drawable/sel_btn_dialog"
            android:textStyle="bold"
            android:text="@string/no" />

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/top_srch_btn"
            android:textSize="@dimen/dimen_14sp"
            android:background="@drawable/sel_btn_dialog"
            android:layout_marginLeft="@dimen/dimen_10dp"
            android:textStyle="bold"
            android:text="@string/yes" />

    </LinearLayout>

</LinearLayout>
