<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/content_ogu_ogu"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="로그아웃"
        android:layout_centerInParent="true"
        android:theme="@style/ThemeOverlay.MyDarkButton" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        app:popupTheme="@style/OguOguUI.PopupOverlay"
        app:title=""
        android:layout_width="match_parent"
        android:layout_height="@dimen/top_toolbar"
        android:gravity="center_vertical"
        app:contentInsetStart="@dimen/dimen_5dp"
        app:contentInsetEnd="@dimen/dimen_5dp">

        <ImageButton
            android:id="@+id/btn_mypet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/sel_btn_mypet" />

        <ImageButton
            android:id="@+id/btn_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/sel_btn_setting" />

        </android.support.v7.widget.Toolbar>

    <Button
        android:id="@+id/btn_google_sign_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/google_sign_out"
        android:theme="@style/ThemeOverlay.MyDarkButton"
        android:visibility="gone" />

    <Button
        android:id="@+id/btn_kakao_sign_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kakao_sign_out"
        android:theme="@style/ThemeOverlay.MyDarkButton"
        android:visibility="gone"/>

    <Button
        android:id="@+id/btn_facebook_sign_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/facebook_sign_out"
        android:theme="@style/ThemeOverlay.MyDarkButton"
        android:visibility="gone"/>
</RelativeLayout>
